--- a/CSS/about.css
+++ b/CSS/about.css
@@ -116,14 +116,18 @@ html {
 }
 /* --------------------- RESPONSIVE ------------------------ */
 
-@media (max-width: 768px) {
 
-       .navbar {
-        width: 100%;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-    }
+@media (max-width: 768px) {
+    .principal .header .navbar {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding: 1rem;
+    justify-content: space-between;
+}
+
+      
     .hamburger {
         display: flex;
         flex-direction: column;
@@ -131,7 +135,7 @@ html {
         cursor: pointer;
         position: absolute;
         top: 15px;
-        left: 300px;
+        left: 340px;
         z-index: 1;
     }
 
@@ -165,8 +169,8 @@ html {
         position: relative;
         gap: 2rem;
         background-color: #0000005e;
-        top: -15px;
-        left: -57px;
+        top: 0px;
+        left: 20px;
         background: #000;
         width: 89%;
         flex-direction: column;
@@ -190,22 +194,20 @@ html {
 
     
     .contenedor-about {
-    width: 100%;
-    height: 100dvh;
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-    padding: 1em 1rem;
-    background-color: #000;
-}
+        width: 100%;
+        height: auto;
+        display: flex;
+        padding: 1em 1rem;
+        background-color: #000;
+        flex-direction: column;
+    }
 .contenido-about {
         width: 100%;
-        margin-top: 184px;
     }
 
 .contenido-about h1 {
     position: relative;
-    top: 160px;
+    top: 0px;
     left: 0px;
     color: #fff;
     font-size: 3.2rem;
@@ -216,29 +218,34 @@ html {
     text-align: center;
 }
 .contenido-about .correo {
-    position: relative;
-    top: 160px;
-    left: 81px;
-    color: #D8D8D8;
-    font-size: 1.6rem;
-    letter-spacing: 0.2rem;
-    font-weight: 100;
-}
+        position: relative;
+        top: 0px;
+        left: 0;
+        color: #D8D8D8;
+        font-size: 1.6rem;
+        letter-spacing: 0.2rem;
+        font-weight: 100;
+        text-align: center;
+        margin-bottom: 6rem;
+    }
 .texto-largo {
     width: 100%;
     text-align: justify;
     line-height: 1.3;
     position: relative;
-    top: 200px;
+    top: 0px;
     left: 0px;
     font-size: 1.6rem;
     color: #d8d8d8;
 }
-.contenido-img {
-        width: 50%;
-        position: absolute;
-        top: 50px;
-        left: 100px;
-        margin-bottom: 3rem;
+    .contenido-img {
+        width: 100%;
     }
+    .contenido-img img {
+    width: 60%;
+    margin: auto;
+    margin-top: 7rem;
 }
+} 
+
+
