--- a/CSS/style.css
+++ b/CSS/style.css
@@ -165,6 +165,7 @@ html {
     .principal {
         width: 100%;
         height: 100dvh;
+        min-height: 100dvh;
         background-image: url("../assets/fondo-nuevo.jpg");
         background-size: cover;
         background-position: center;
@@ -290,7 +291,7 @@ html {
     }
     .social {
         position: fixed;
-        top: 650px;
+        top: 600px;
         left: 15px;
         margin-top: 40px;
         font-size: 22px;
